--- a/Lesson 6/index.css
+++ b/Lesson 6/index.css
@@ -3,10 +3,10 @@ p {
   letter-spacing: 1px;
   text-transform: uppercase;
   text-align: center;
-  border: 2px solid rgba(0, 0, 200, 0.6);
-  background: rgba(0, 0, 200, 0.3);
-  color: rgba(0, 0, 200, 0.6);
-  box-shadow: 1px 1px 2px rgba(0, 0, 200, 0.4);
+  border: 2px solid purple;
+  background: purple;
+  color: black;
+  box-shadow: 1px 1px 2px purple;
   border-radius: 10px;
   padding: 3px 10px;
   display: inline-block;
